tests/snapshots/snapshot_tests__array_init_select_copy.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_select_copy.vmt",
    status: Panic,
    used_instantiations: [],
}
