tests/snapshots/snapshot_tests__array_init_symmetr_swap.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_symmetr_swap.vmt",
    status: Timeout,
    used_instantiations: [],
}
