tests/snapshots/snapshot_tests__array_init_symmetr_swap_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_symmetr_swap_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int b Z (Read-Int-Int a Z)) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z (- (Read-Int-Int b Z))) Z) (- (Read-Int-Int b Z)))",
        "(= (Read-Int-Int (Write-Int-Int a_next Z x) Z) x)",
        "(= (Read-Int-Int (Write-Int-Int a Z (- (Read-Int-Int b_next Z))) Z) (- (Read-Int-Int b_next Z)))",
        "(= (Read-Int-Int (Write-Int-Int b_next Z (Read-Int-Int a Z)) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z (- (Read-Int-Int a Z))) Z) (- (Read-Int-Int a Z)))",
        "(= (Read-Int-Int (Write-Int-Int b_next Z (- x)) Z) (- x))",
        "(= (Read-Int-Int (Write-Int-Int a Z 2240) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z 2240) Z) 2240)",
        "(= (Read-Int-Int (Write-Int-Int a Z x) Z) x)",
        "(= (Read-Int-Int (Write-Int-Int a Z 12617) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z 12617) Z) 12617)",
    ],
}
