tests/snapshots/snapshot_tests__array_init_tuples_relative.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_tuples_relative.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!3 3 c) c) (Read-Int-Int Array-Int-Int!val!3 c))",
    ],
}
