tests/snapshots/snapshot_tests__array_init_upto_nondet.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_upto_nondet.vmt",
    status: Panic,
    used_instantiations: [],
}
